# simple-server

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: rust.yml
src/: main.rs
