[package]
name = "simple-server"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
tokio = { version = "1.48.0", features = ["full"] }
