[package]
name = "simple-server"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
clap = {version = "4.5.53", features = ["default","derive"]}
http-body-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full"] }
pretty_env_logger = "0.5.0"
tokio = { version = "1.48.0", features = ["full"] }
log = "0.4"